# dflvote

./: .gitignore  group_1_model.pth  group_2_model.pth  memo.md  pyproject.toml  sbatch.sh
experiments/MNIST_clients8_attackers0_targetedFalse_groups[[0, 1, 2, 3], [4, 5, 6, 7]]_20250629_171408/: experiment_info.json
save/exp8_cl32_train_1000(10x)/MNIST_cl32_attclimit7_datasize1000_distg[0, 1, 2, 3, 4, 5, 6, 7]_groups[0, 1, 2, 3]_ep400_alpha0.5_20250703_141729/: experiment_info.json
save/exp8_cl32_train_1000(10x)/MNIST_cl32_attclimit7_datasize1000_distg[0, 1, 2, 3, 4, 5, 6, 7]_groups[0, 8, 16, 24]_ep400_alpha0.5_20250703_145456/: experiment_info.json
save/exp8_cl32_train_1000(10x)/MNIST_cl32_attclimit7_datasize1000_distg[0, 1, 2, 3, 4, 5, 6, 7]_groups[1, 16, 21, 26]_ep400_alpha0.5_20250703_130232/: experiment_info.json
save/exp8_cl32_train_1000(10x)/MNIST_cl32_attclimit7_datasize1000_distg[0, 1, 2, 3, 4, 5, 6, 7]_groups[23, 25, 7, 22]_ep400_alpha0.5_20250703_114610/: experiment_info.json
save/exp8_cl32_train_1000(10x)/MNIST_cl32_attclimit7_datasize1000_distg[0, 1, 2, 3, 4, 5, 6, 7]_groups[24, 23, 5, 22]_ep400_alpha0.5_20250703_134055/: experiment_info.json
save/exp8_cl32_train_1000(10x)/MNIST_cl32_attclimit7_datasize1000_distg[0, 1, 2, 3, 4, 5, 6, 7]_groups[26, 5, 10, 15]_ep400_alpha0.5_20250703_110805/: experiment_info.json
src/: client.py  generate_dists.py  generate_division.py  group.py  main.py  model.py  model_manager.py  utils.py
src/plotter/: model_variance.ipynb  plot.ipynb
tests/: test_generate_dists.py  test_generate_division.py  test_main.py
(+1 files in other folders)
