[project]
name = "dflvote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "nn>=0.1.1",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "pyrapl>=0.2.3.1",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250516",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "."
]
